--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "storybook-addon-jotai",
-  "version": "0.0.6",
+  "name": "@alexgorbatchev/storybook-addon-jotai",
+  "version": "1.0.2",
   "description": "A storybook addon that allows you to use components in your stories that rely on jotai atoms and see internal Jotai state in a panel.",
   "keywords": [
     "storybook-addons",
@@ -9,9 +9,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/johnf/storybook-addon-jotai"
+    "url": "https://github.com/alexgorbatchev/storybook-addon-jotai"
   },
-  "author": "John Ferlito <johnf@inodes.org>",
+  "authors": [
+    "John Ferlito <johnf@inodes.org>",
+    "Alex Gorbatchev <alex.gorbatchev@gmail.com>"
+  ],
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -20,7 +23,8 @@
     "dist/**/*",
     "README.md",
     "*.js",
-    "*.d.ts"
+    "*.d.ts",
+    "*.png"
   ],
   "scripts": {
     "build-storybook": "build-storybook",
@@ -36,25 +40,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@storybook/addon-essentials": "^6.4.0",
     "@storybook/react": "^6.4.0",
-    "auto": "^10.3.0",
-    "babel-loader": "^8.1.0",
-    "boxen": "^6.2.1",
-    "concurrently": "^7.0.0",
-    "dedent": "^0.7.0",
-    "jotai": "^1.5.0",
-    "prettier": "^2.3.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.2.4"
+    "auto": "^11.0.4",
+    "babel-loader": "^9.1.3",
+    "boxen": "^7.1.1",
+    "concurrently": "^8.2.2",
+    "dedent": "^1.5.1",
+    "jotai": "^2.5.1",
+    "prettier": "^3.1.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.3.2"
   },
   "peerDependencies": {
     "@storybook/addons": "^6.4.0",
@@ -62,7 +66,7 @@
     "@storybook/components": "^6.4.0",
     "@storybook/core-events": "^6.4.0",
     "@storybook/theming": "^6.4.0",
-    "jotai": "^1.0.0",
+    "jotai": "^2.5.1",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
@@ -83,6 +87,5 @@
       "react"
     ],
     "icon": "https://user-images.githubusercontent.com/321738/63501763-88dbf600-c4cc-11e9-96cd-94adadc2fd72.png"
-  },
-  "dependencies": {}
+  }
 }
