--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@alexgorbatchev/storybook-addon-jotai",
-  "version": "1.0.4",
-  "description": "A storybook addon that allows you to use components in your stories that rely on jotai atoms and see internal Jotai state in a panel.",
+  "version": "1.0.5",
+  "description": "A Storybook addon that allows you to use components in your stories that rely on Jotai Atoms and see internal Jotai state in a panel.",
   "keywords": [
     "storybook-addons",
     "jotai",
