--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "buildTsc": "tsc --declaration --emitDeclarationOnly --outDir ./dist/ts",
     "release": "yarn build && auto shipit",
     "start": "concurrently \"yarn build:watch\" \"yarn storybook -- --no-manager-cache --quiet\"",
-    "storybook": "start-storybook -p 6006",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
