--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "noUnusedLocals": true,
     "strict": true
   },
-  "exclude": ["dist", "**/dist", "node_modules", "**/node_modules"]
+  "exclude": ["dist", "**/dist", "node_modules", "**/node_modules"],
+  "include": ["src", "stories"]
 }
