--- a/package.json
+++ b/package.json
@@ -54,25 +54,28 @@
     "build": "tsup"
   },
   "devDependencies": {
-    "@storybook/components": "^8.1.5",
-    "@storybook/manager-api": "^8.1.5",
-    "@storybook/preview-api": "^8.1.5",
-    "@storybook/types": "^8.1.5",
-    "@storybook/react-vite": "^8.1.5",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^9.1.2",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^9.1.2",
+    "@storybook/react-vite": "^9.1.2",
+    "@storybook/test": "^8.6.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "jotai": "^2.8.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5",
-    "storybook": "^8.1.5",
+    "storybook": "^9.1.2",
     "tsup": "^8.1.0",
+    "typescript": "^5.4.5",
     "vite": "^5.2.0"
   },
   "peerDependencies": {
     "jotai": "^2.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "",
+    "react-dom": "",
+    "storybook": "^8.0.0 || ^9.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
